--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="img/png" href="/data-management.png" >
+    <link rel="icon" type="img/png" href="./data-management.png" >
     <link rel="stylesheet" href="./style.css">
     <title>UTC</title>
 </head>
@@ -15,11 +15,11 @@
     <h2>ESTAS SON ALGUNAS DE NUESTRAS ÁREAS</h2>
     <p>Da clic para conocer alguna:</p>
     <div class="redes">
-        <a href="/img/mi-utc.jpeg" target="_blank" class="btn"><i>🤖 Mi Edifico Sistemas</i></a>
+        <a href="img/mi-utc.jpeg" target="_blank" class="btn"><i>🤖 Mi Edifico Sistemas</i></a>
         <a href="/img/entrada.jpeg" target="_blank" class="btn">🪜 Entrada</a>
-        <a href="/mis-profes.jpeg" target="_blank" class="btn">😎 El jefe de carrera regañando a los profes</a>
+        <a href="mis-profes.jpeg" target="_blank" class="btn">😎 El jefe de carrera regañando a los profes</a>
         <a href="/img/comedor-profes.jpeg" target="_blank" class="btn">🍴 El comedor de los Profes</a>
-        <a href="/sanitarios.jpeg" target="_blank" class="btn">🚻 Sanitarios</a>
+        <a href="./sanitarios.jpeg" target="_blank" class="btn">🚻 Sanitarios</a>
         <a href="/img/mi-salon.jpeg" target="_blank" class="btn">🙋‍♂️ Mi Salón</a>
         <a href="/img/1.png" target="_blank" class="btn">📝Mi CV</a>
         <a href="https://github.com/Morito161?tab=repositories" target="_blank" class="btn">💼📁 Mi Portafolio</a>
