--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>ESTAS SON ALGUNAS DE NUESTRAS ÁREAS</h2>
     <p>Da clic para conocer alguna:</p>
     <div class="redes">
-        <a href="img/mi-utc.jpeg" target="_blank" class="btn"><i>🤖 Mi Edifico Sistemas</i></a>
+        <a href="./img/mi-utc.jpeg" target="_blank" class="btn"><i>🤖 Mi Edifico Sistemas</i></a>
         <a href="/img/entrada.jpeg" target="_blank" class="btn">🪜 Entrada</a>
         <a href="mis-profes.jpeg" target="_blank" class="btn">😎 El jefe de carrera regañando a los profes</a>
         <a href="/img/comedor-profes.jpeg" target="_blank" class="btn">🍴 El comedor de los Profes</a>
